--- a/assets/light.css
+++ b/assets/light.css
@@ -2,7 +2,7 @@ body {
     /* background-color: #ffffff; */
     font-family: 'Open Sans', serif;
     font-weight: 400;
-    color: #222;
+    color: hsl(0, 0%, 25%);
 }
 
 body.swoosh {
@@ -17,6 +17,7 @@ h4,
 h5,
 h6 {
     font-family: 'Roboto Slab', serif;
+    color: hsl(0, 0%, 12%);
 }
 
 
@@ -26,15 +27,25 @@ h6 {
 /* MAIN */
 
 cell {
-    margin-bottom: 20px;
-    box-shadow: 0px 0px 12px -6px rgba(0, 0, 0, 0.2);
+    margin-top:20px;
+    position: relative;
+}
+
+cell:focus-within {
+    /* box-shadow: 0px 0px 12px -4px rgba(0, 0, 0, 0.2); */
+    /* box-shadow: 0px 0px 12px -4px rgba(0, 0, 0, 0.8); */
+    /* border-left: 4px solid hsl(0, 0%, 0%); */
 }
 
 celloutput {
     background-color: white;
-    border: 1px solid rgba(0, 0, 0, .1);
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
+    /* border: 1px solid rgba(0, 0, 0, .1); */
+    /* border-top-left-radius: 4px; */
+    /* border-top-right-radius: 4px; */
+}
+
+celloutput:focus {
+    outline: none;
 }
 
 code {
@@ -50,9 +61,82 @@ code {
 .CodeMirror {
     font-family: 'Roboto Mono', monospace !important;
     font-size: 14px;
-    border-bottom-left-radius: 6px;
-    border-bottom-right-radius: 6px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border: 1px solid rgba(0,0,0,.1);
+    /* border-top: none; */
+    width: auto;
 }
+
+cell > button {
+    width: 100%;
+    margin: 0px !important;
+    border: none;
+    background: none;
+    cursor: pointer;
+    margin: 4px;
+    color: hsl(204, 86%, 35%);
+    font-style: italic;
+    font-family: 'Roboto Mono', monospace;
+    height:20px;
+    position: absolute;
+    left: 0px;
+    /* right: 0px; */
+}
+
+@media (any-pointer: fine), (any-pointer: caorse){
+    cell > button {
+        opacity: 0%;
+    }
+}
+
+cell:hover > button {
+    opacity: 25%;
+}
+
+cell > button:hover{
+    opacity: 100%;
+}
+
+cell > button.addcellbefore {
+    margin-top: -20px !important;
+}
+
+cell > button > span {
+    /* background: rgba(0,0,0,.1); */
+}
+
+trafficlight {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+cell:hover > trafficlight {
+    background: rgba(0,0,0,.1);
+}
+
+cell.dependent > trafficlight {
+    background: lightblue;
+}
+
+cell.warning > trafficlight {
+    background: hsl(39, 100%, 75%);
+}
+
+cell.error > trafficlight {
+    background: hsl(0, 100%, 71%);
+}
+
+cell:hover > cellinput > .CodeMirror,
+cell.dependent > cellinput > .CodeMirror,
+cell.warning > cellinput > .CodeMirror,
+cell.error > cellinput > .CodeMirror {
+    border-left: none;
+    padding-left: 1px;
+    border-bottom-left-radius: 0px;
+}
+
+
 
 @keyframes 🌈 {
     from {
