--- a/assets/light.css
+++ b/assets/light.css
@@ -236,6 +236,20 @@ trafficlight {
 }
 
 
+
+
+cell.dependent > trafficlight {
+    background: lightblue;
+}
+
+cell.warning > trafficlight {
+    background: hsl(39, 100%, 75%);
+}
+
+cell.error > trafficlight {
+    background: hsl(0, 100%, 71%);
+}
+
 cell.running > trafficlight {
     background: repeating-linear-gradient(
         -45deg,
@@ -248,6 +262,18 @@ cell.running > trafficlight {
     animation: 2s linear 0s infinite running scrollbackground;
 }
 
+cell.running.error > trafficlight {
+    background: repeating-linear-gradient(
+        -45deg,
+        hsl(0, 100%, 71%),
+        hsl(0, 100%, 71%) 8px,
+        hsla(12, 71%, 47%, 0.33) 8px,
+        hsla(12, 71%, 47%, 0.33) 16px
+      );
+    background-size: 4px 22.62741699797px; /* 16 * sqrt(2) */
+    animation: 2s linear 0s infinite running scrollbackground;
+}
+
 @keyframes scrollbackground {
     0%{
         background-position-y: 0px;
@@ -255,18 +281,6 @@ cell.running > trafficlight {
     100%{
         background-position-y: 22.62741699797px; /* 16 * sqrt(2) */
     }
-}
-
-cell.dependent > trafficlight {
-    background: lightblue;
-}
-
-cell.warning > trafficlight {
-    background: hsl(39, 100%, 75%);
-}
-
-cell.error > trafficlight {
-    background: hsl(0, 100%, 71%);
 }
 
 cell:hover > cellinput > .CodeMirror,
