--- a/assets/light.css
+++ b/assets/light.css
@@ -102,9 +102,16 @@ code {
     font-weight: bold;
 }
 
-.CodeMirror {
+ul.CodeMirror-hints {
+    padding: 0;
+}
+
+.CodeMirror,
+ul.CodeMirror-hints {
     font-family: 'Roboto Mono', monospace !important;
     font-size: .75em;
+}
+.CodeMirror{
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     border: 1px solid rgba(0, 0, 0, .1);
