🎁 Ask to wrap cell
in a `begin ... end` block

--- a/assets/light.css
+++ b/assets/light.css
@@ -54,6 +54,11 @@ celloutput p:last-child {
     margin-block-end: 0px;
 }
 
+celloutput>pre>code>a {
+    color: inherit;
+    font-weight: 500;
+}
+
 
 /* HEADER */
 header {
