--- a/assets/light.css
+++ b/assets/light.css
@@ -119,12 +119,12 @@ ul.CodeMirror-hints {
     padding: 0;
 }
 
-.CodeMirror,
+cellinput .CodeMirror,
 ul.CodeMirror-hints {
     font-family: 'Roboto Mono', monospace !important;
     font-size: .75em;
 }
-.CodeMirror{
+cellinput .CodeMirror{
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     border: 1px solid rgba(0, 0, 0, .1);
@@ -158,7 +158,7 @@ preamble>button>span::after{
     background-size: 17px 17px;
     display: block;
     content: "Run all" !important;
-    background-image: url(https://unpkg.com/ionicons@5.0.0/dist/svg/refresh-outline.svg);
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/refresh-outline.svg);
     background-repeat: no-repeat;
     background-position-x: right;
     background-position-y: 1px;
@@ -239,8 +239,8 @@ cell>button.addcell.before {
 }
 
 cell>button.addcell>span::after {
-    /* background-image: url(https://unpkg.com/ionicons@5.0.0/dist/svg/add-circle-outline.svg); */
-    background-image: url(https://unpkg.com/ionicons@5.0.0/dist/svg/add-outline.svg);
+    /* background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/add-circle-outline.svg); */
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/add-outline.svg);
 }
 
 runarea {
@@ -276,11 +276,11 @@ runarea>button.runcell {
 }
 
 runarea>button.runcell>span::after {
-    background-image: url(https://unpkg.com/ionicons@5.0.0/dist/svg/caret-forward-circle-outline.svg);
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/caret-forward-circle-outline.svg);
 }
 
 cell.running>runarea>button.runcell>span::after {
-    background-image: url(https://unpkg.com/ionicons@5.0.0/dist/svg/stop-circle-outline.svg);
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/stop-circle-outline.svg);
 }
 
 cellinput>button.deletecell {
@@ -291,7 +291,7 @@ cellinput>button.deletecell {
 }
 
 cellinput>button.deletecell>span::after {
-    background-image: url(https://unpkg.com/ionicons@5.0.0/dist/svg/close-circle-outline.svg);
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.0.0/src/svg/close-circle-outline.svg);
 }
 
 trafficlight {
